<resources>
    <string name="app_name">GamesAssistant</string>
    <string name="dice_title">Dice</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="default_dice_count">1</string>
    <string-array name="dice_types">
        <item>d6</item>
        <item>d4</item>
        <item>d10</item>
        <item>d20</item>
    </string-array>
    <string name="chess_timer_title">Chess Timer</string>
    <string name="timer_title">Timer</string>
    <string name="queue_title">Queue</string>
    <string name="add_player_hint">Player Name</string>
    <string name="players_list_title">Players</string>
    <string name="round_number">Round %d</string>
    <string-array name="timer_modes">
        <item>Hourglass</item>
        <item>7-Segment</item>
    </string-array>
</resources>